--- a/now.json
+++ b/now.json
@@ -7,5 +7,6 @@
       "use": "@now/python@canary",
       "config": { "maxLambdaSize": "25mb" }
     }
-  ]
+  ],
+  "routes": [{"src": "/(.*)", "dest": "/"}]
 }
